apps/order-service/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: order-service
  labels:
    app: order-service
    part-of: flexobo
